--- a/main.ipynb
+++ b/main.ipynb
@@ -680,11 +680,13 @@
   },
   {
    "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": "",
-   "id": "280538c0d6b9ca73"
+   "cell_type": "markdown",
+   "source": [
+    "## Discusión\n",
+    "\n",
+    "Los resultados finales fueron muy satisfactorios. Se obtuvo un `accuracy` del 95.38%, un resultado sobresaliente. El modelo es capaz de categorizar las imágenes dependiendo de su familia con una gran fiabilidad, lo que también resalta las claras diferencias entre cada familia de malware. Si las diferencias fueran menores, sería más difícil construir un modelo capaz de clasificarlos de una manera tan fiable como se logró en este laboratorio."
+   ],
+   "id": "f68d496e2ba5d0b1"
   }
  ],
  "metadata": {
