--- a/main.ipynb
+++ b/main.ipynb
@@ -21,7 +21,8 @@
     }
    },
    "source": [
-    "import numpy as np\n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import os\n",
     "from collections import Counter"
    ],
