--- a/main.ipynb
+++ b/main.ipynb
@@ -712,7 +712,6 @@
     "import numpy as np\n",
     "from art.estimators.classification import TensorFlowV2Classifier\n",
     "\n",
-    "# Ensure eager execution\n",
     "tf.config.run_functions_eagerly(True)"
    ],
    "id": "ad17359b4adc810d",
@@ -727,10 +726,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "# Load model\n",
-    "model_copy = tf.keras.models.clone_model(model)"
-   ],
+   "source": "model_copy = tf.keras.models.clone_model(model)",
    "id": "537d78fef339c155",
    "outputs": [],
    "execution_count": 25
@@ -744,7 +740,6 @@
    },
    "cell_type": "code",
    "source": [
-    "# Define loss and optimizer\n",
     "loss_object = tf.keras.losses.CategoricalCrossentropy()\n",
     "optimizer = tf.keras.optimizers.Adam()"
    ],
@@ -808,7 +803,7 @@
    "source": [
     "# Get a batch\n",
     "batch = next(data)\n",
-    "x_sample = np.array(batch[0], dtype=np.float32)  # Ensure NumPy array\n",
+    "x_sample = np.array(batch[0], dtype=np.float32)\n",
     "y_sample = np.array(batch[1])"
    ],
    "id": "6a911f2f83bcb6b",
@@ -833,7 +828,7 @@
     "    train_step=None,\n",
     "    channels_first=False,\n",
     "    clip_values=(0.0, 1.0),\n",
-    "    preprocessing=None  # Disable preprocessing if already scaled\n",
+    "    preprocessing=None\n",
     ")"
    ],
    "id": "ace4981147485edb",
@@ -953,7 +948,6 @@
    },
    "cell_type": "code",
    "source": [
-    "# Seleccionar un subconjunto pequeño (por ejemplo, 5 imágenes)\n",
     "x_subset = x_sample[:5]\n",
     "y_subset = y_sample[:5]"
    ],
@@ -969,10 +963,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "# Crear el ataque HSJ\n",
-    "attack_hsj = HopSkipJump(classifier=classifier, max_iter=10)"
-   ],
+   "source": "attack_hsj = HopSkipJump(classifier=classifier, max_iter=10)",
    "id": "3ead0024695b9c29",
    "outputs": [],
    "execution_count": 38
@@ -985,10 +976,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "# Generar adversarios\n",
-    "x_adv_hsj = attack_hsj.generate(x=x_subset)"
-   ],
+   "source": "x_adv_hsj = attack_hsj.generate(x=x_subset)",
    "id": "88b07089296681e6",
    "outputs": [
     {
