--- a/main.ipynb
+++ b/main.ipynb
@@ -838,7 +838,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Primer ataque: FastGradientMethod",
+   "source": [
+    "### Primer ataque: FastGradientMethod\n",
+    "\n",
+    "Es un método de ataque basado en gradientes que manipula las entradas de un modelo para generar ejemplos adversariales. Utiliza el gradiente de la función de pérdida con respecto a la entrada, modificando los datos en la dirección del gradiente para maximizar el error del modelo, creando ejemplos que pueden engañar al modelo sin requerir una búsqueda exhaustiva."
+   ],
    "id": "e04f3685b34e17dd"
   },
   {
@@ -923,7 +927,11 @@
   {
    "metadata": {},
    "cell_type": "markdown",
-   "source": "### Segundo ataque: HopSkipJump",
+   "source": [
+    "### Segundo ataque: HopSkipJump\n",
+    "\n",
+    "Es un ataque de caja negra que genera ejemplos adversariales sin necesidad de conocimiento directo del modelo. Utiliza una combinación de métodos de optimización y saltos rápidos para encontrar perturbaciones mínimas en las entradas que puedan engañar al modelo, todo ello sin requerir el cálculo directo del gradiente del modelo."
+   ],
    "id": "eabf358892aeb685"
   },
   {
@@ -1109,40 +1117,40 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:36.114878Z",
-     "start_time": "2025-05-13T04:26:36.110855Z"
+     "end_time": "2025-05-13T04:37:06.891612Z",
+     "start_time": "2025-05-13T04:37:06.888300Z"
     }
    },
    "cell_type": "code",
    "source": "from art.defences.preprocessor import FeatureSqueezing, JpegCompression",
    "id": "7110579cc015483d",
    "outputs": [],
-   "execution_count": 61
+   "execution_count": 110
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:36.300917Z",
-     "start_time": "2025-05-13T04:26:36.297394Z"
+     "end_time": "2025-05-13T04:37:43.337291Z",
+     "start_time": "2025-05-13T04:37:43.334646Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Crear defensa de Feature Squeezing\n",
     "fs = FeatureSqueezing(\n",
-    "    bit_depth=5,\n",
+    "    bit_depth=4,\n",
     "    clip_values=(0.0, 1.0),\n",
     ")"
    ],
    "id": "65eebe3a7a87c2a4",
    "outputs": [],
-   "execution_count": 62
+   "execution_count": 120
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:36.535218Z",
-     "start_time": "2025-05-13T04:26:36.519323Z"
+     "end_time": "2025-05-13T04:37:07.303658Z",
+     "start_time": "2025-05-13T04:37:07.291435Z"
     }
    },
    "cell_type": "code",
@@ -1152,13 +1160,13 @@
    ],
    "id": "426d0edb0b6d46a0",
    "outputs": [],
-   "execution_count": 63
+   "execution_count": 112
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:37.201013Z",
-     "start_time": "2025-05-13T04:26:37.081213Z"
+     "end_time": "2025-05-13T04:37:07.775011Z",
+     "start_time": "2025-05-13T04:37:07.660405Z"
     }
    },
    "cell_type": "code",
@@ -1168,13 +1176,13 @@
    ],
    "id": "3c3bf1d5815e305e",
    "outputs": [],
-   "execution_count": 64
+   "execution_count": 113
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:37.505934Z",
-     "start_time": "2025-05-13T04:26:37.501896Z"
+     "end_time": "2025-05-13T04:37:08.111265Z",
+     "start_time": "2025-05-13T04:37:08.108126Z"
     }
    },
    "cell_type": "code",
@@ -1192,13 +1200,13 @@
      ]
     }
    ],
-   "execution_count": 65
+   "execution_count": 114
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:38.611452Z",
-     "start_time": "2025-05-13T04:26:38.608623Z"
+     "end_time": "2025-05-13T04:32:17.153251Z",
+     "start_time": "2025-05-13T04:32:17.149760Z"
     }
    },
    "cell_type": "code",
@@ -1211,13 +1219,13 @@
    ],
    "id": "9f154a3c47b5bafe",
    "outputs": [],
-   "execution_count": 66
+   "execution_count": 98
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:38.913738Z",
-     "start_time": "2025-05-13T04:26:38.903833Z"
+     "end_time": "2025-05-13T04:32:18.559697Z",
+     "start_time": "2025-05-13T04:32:18.549084Z"
     }
    },
    "cell_type": "code",
@@ -1227,13 +1235,13 @@
    ],
    "id": "326f31c5eed2373a",
    "outputs": [],
-   "execution_count": 67
+   "execution_count": 99
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:39.217757Z",
-     "start_time": "2025-05-13T04:26:39.187911Z"
+     "end_time": "2025-05-13T04:32:18.874607Z",
+     "start_time": "2025-05-13T04:32:18.843858Z"
     }
    },
    "cell_type": "code",
@@ -1243,13 +1251,13 @@
    ],
    "id": "e0f5c3a2392a440e",
    "outputs": [],
-   "execution_count": 68
+   "execution_count": 100
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-05-13T04:26:39.488133Z",
-     "start_time": "2025-05-13T04:26:39.484632Z"
+     "end_time": "2025-05-13T04:32:19.750361Z",
+     "start_time": "2025-05-13T04:32:19.747002Z"
     }
    },
    "cell_type": "code",
@@ -1264,11 +1272,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "🔰 Tasa de éxito del ataque HopSkipJump post-defensa (JPEG): 40.00%\n"
+      "🔰 Tasa de éxito del ataque HopSkipJump post-defensa (JPEG): 100.00%\n"
      ]
     }
    ],
-   "execution_count": 69
+   "execution_count": 101
   },
   {
    "metadata": {},
@@ -1279,7 +1287,9 @@
     "| Ataque      | Tasa de éxito original | Tasa de éxito post-defensa |\n",
     "| ----------- |------------------------|----------------------------|\n",
     "| FGSM        | `100%`                 | `100%`                     |\n",
-    "| HopSkipJump | `100%`                 | `40%`                      |\n"
+    "| HopSkipJump | `100%`                 | `40%`                      |\n",
+    "\n",
+    "\n"
    ],
    "id": "7ab2ca95615287a1"
   }
